<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/common_base_tool_bar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_book_tag_bg"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/subscribe_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:paddingBottom="14.0dip" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30.0dip"
                android:gravity="bottom"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/my_category_text"
                    style="@style/common_subscribe_my_tip_text"
                    android:text="@string/book_tag_container" />

                <TextView
                    android:id="@+id/my_category_tip_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12.0dip"
                    android:text="@string/book_tag_set_introduce"
                    android:textColor="@color/common_gray_light"
                    android:textSize="12.0sp" />
            </LinearLayout>

            <View
                android:id="@+id/seperate_line"
                style="@style/common_subscribe_seperate_line" />

            <com.roshine.lookbar.commonlib.wight.DragGrid
                android:id="@+id/userGridView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:horizontalSpacing="5dip"
                android:listSelector="@android:color/transparent"
                android:numColumns="4"
                android:scrollbars="vertical"
                android:stretchMode="columnWidth"
                android:verticalSpacing="5dp" />

            <View
                android:id="@+id/seperate_line2"
                style="@style/common_subscribe_seperate_line" />

            <TextView
                android:id="@+id/more_category_text"
                style="@style/common_subscribe_more_tip_text"
                android:layout_marginBottom="14.0dip"
                android:text="@string/book_tag_uncontainer" />

            <com.roshine.lookbar.commonlib.wight.OtherGridView
                android:id="@+id/otherGridView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                
                android:gravity="center"
                android:horizontalSpacing="5dp"
                android:listSelector="@android:color/transparent"
                android:numColumns="4"
                android:scrollbars="vertical"
                android:stretchMode="columnWidth"
                android:verticalSpacing="5dp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
